<resources>
    <string name="app_name">CovidApp</string>
    <string name="how_can_i_help_nyou_today">How can I help\n
        you today?</string>
    <string name="hi_how_can_i_nhelp_you_today">Hi, How Can I \nHelp You Today?</string>
    <string name="countries_statistics">Countries Statistics</string>
    <string name="deep_breathing_while_on_your_back">Deep Breathing While On Your Back</string>
    <string name="lie_on_your_back_and_bend_your_knees_so_that_the_bottom_of_your_feet_are_resting_on_the_bed_place_your_hands_on_top_of_your_stomach_or_wrap_them_around_the_sides_of_your_stomach_a_close_your_lips_and_place_your_tongue_on_the_roof_of_your_mouth_breathe_in_through_the_nose_and_pull_air_down_into_your_stomach_where_your_hands_are_try_to_spread_your_fingers_apart_with_your_breath_slowly_exhale_your_breath_through_the_nose_repeat_deep_breaths_for_one_minute">Lie on your back and bend your knees so that the bottom of your feet are resting on the bed. Place your hands on top of your stomach or wrap them around the sides of your stomach. a Close your lips and place your tongue on the roof of your mouth. Breathe in through the nose and pull air down into your stomach where your hands are. Try to spread your fingers apart with your breath. Slowly exhale your breath through the nose. Repeat deep breaths for one minute.</string>
    <string name="close">Close</string>
    <string name="whoops_something_went_wrong">Whoops! Something went wrong.</string>
    <string name="global_statistics">Global Statistics</string>
    <string name="realtime_maps">Realtime Maps</string>
    <string name="lokasi_sekarang">Lokasi Sekarang</string>
    <string name="open_maps">Open Maps</string>
    <string name="today_s_statistics">Today’s Statistics</string>
    <string name="weekly_statistics">Weekly Statistics</string>
    <string name="general">General</string>
    <string name="symptoms">Symptoms</string>
    <string name="prevention">Prevention</string>
    <string name="covid_test">Covid Test</string>
    <string name="exercise">Exercise</string>
    <string name="food">Food</string>
    <string name="people_at_risk">People At Risk</string>
    <string name="covid_19_news">Covid-19 News</string>
    <string name="trending_news">Trending News</string>
    <string name="you_can_also">You can also...</string>
    <string name="see_covid_stats_for_any_country">See COVID stats for any country</string>
    <string name="hi_welcome_to_the_international_covid_center">Hi, Welcome to the International Covid Center!</string>
    <string name="here_you_can_see_the_covid_19_cases_update_globally">Here you can see the COVID-19 cases update globally.</string>
    <string name="did_we_mention_about">Did We Mention About...</string>
    <string name="you_can_get_covid_related_news_per_country">You can get covid related news per country?</string>
    <string name="and_of_course">And of course...</string>
    <string name="you_can_learn_covid_19_related_information_from_the_best_sources">You can learn covid-19 related information from the best sources</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="darkmode">DarkMode</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="provinsi_negara">Provinsi, Negara</string>
    <string name="last_updated_10_feb_2021">Last Updated : 10 Feb 2021</string>
    <string name="confirmed">Confirmed</string>
    <string name="who_should">Who should get tested for current infection?</string>
    <string name="people_who">- People who have symptoms of COVID-19.\n"
     - Most people who have had close contact (within 6 feet for a total of 15 minutes or more over a 24-hour period) with someone with confirmed COVID-19.\n"
     - Unvaccinated people who have taken part in activities that put them at higher risk for COVID-19 because they cannot physically distance as needed to avoid exposure, such as travel, attending large social or mass gatherings, or being in crowded or poorly-ventilated indoor settings.\n"
     - People who have been asked or referred to get tested by their healthcare provider, or state, tribal, localexternal icon, or territorial health department."
    </string>
    <string name="how_to_get_tested">How to get tested for current COVID-19 infection?</string>
    <string name="contact_your">Contact your healthcare provider or visit your state, tribal, localexternal icon, and territorial health department’s website to find the latest local information on testing. The type of viral COVID-19 tests offered may differ by location.</string>
    <string name="how_to_use_results">How to use results of viral tests?</string>
    <string name="if_you">If you test positive, know what protective steps to take to prevent others from getting sick.\n- If you test negative, you probably were not infected at the time your sample was collected. The test result only means that you did not have COVID-19 at the time of testing. Continue to take steps to protect yourself.</string>
    <string name="what_are">What are the different types of Covid-19 test?</string>
    <string name="polymerase_chain">- Polymerase chain reaction (PCR) tests are sent away to a lab to diagnose disease\n
    - Lateral flow tests (LFTs) can diagnose Covid-19 on the spot, but aren’t as accurate as PCR tests\n
    - Antibody (or serology) tests can’t diagnose active infection, but they can help to tell if a person has immunity to Covid-19
    </string>
    <string name="what_is_PCR">What is PCR testing?</string>
    <string name="pcr_tests">PCR tests are used to directly screen for the presence of viral RNA, which will be detectable in the body before antibodies form or symptoms of the disease are present. This means the tests can tell whether or not someone has the virus very early on in their illness.\n
    By scaling PCR testing to screen vast swathes of nasopharyngeal swab samples from within a population, public health officials can get a clearer picture of the spread of a disease like Covid-19.\n
    However, PCR still has its caveats. These types of Covid-19 test need to be sent away to a laboratory for analysis, meaning it can take days for people to find out their results.
    </string>
    <string name="how_about_lateral">ow about a lateral flow test?</string>
    <string name="lft">LFTs are similar to PCR tests, in that they’re both types of antigen test, designed to pick up active Covid-19 infection rather than antibodies to the disease. With a Covid-19 LFT, a nasopharyngeal sample is placed on a small absorbent pad, which is then drawn along the pad via a capillary line to a strip coated in antibodies, which bind to SARS-Cov-2 proteins. If these proteins are present, this will show as a coloured line on the test, indicating infection.
    </string>
    <string name="what_is_antibody">What is antibody testing?</string>
    <string name="antibody_tests">Antibody tests are being used to evaluate the immune responses in people who have been vaccinated against Covid-19. Researchers don’t yet know how long vaccine-induced immunity will last or if booster shots will be needed. There has been some indication that Covid-19 variants are making certain vaccines less effective, but thus far they still appear to generally provide enough protection to guard against severe or fatal disease.
    </string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="total_case">Total Case</string>
    <string name="deep_breathing_stomach">Deep Breathing While on Your Stomach</string>
    <string name="deep_breathing_stomach_info">- Lie on your stomach and rest your head on your hands to allow room to breathe.\n
    \n
    - Close your lips and place your tongue on the roof of your mouth.\n
    \n
    - Breathe in through your nose and pull air down into your stomach. Try to focus on your stomach pushing into the mattress as you breathe.\n
    \n
    - Slowly exhale your breath through your nose.\n
    \n
    - Repeat deep breaths for one minute.\n
    </string>
    <string name="deep_breathing_standing">Deep Breathing While Standing</string>
    <string name="deep_breathing_standing_info">- Stand upright and place your hands around the sides of your stomach.\n
    \n
    - Close your lips and place your tongue on the roof of your mouth.\n
    \n
    - Breathe in through your nose and pull air down into your stomach where your hands are. Try to spread your fingers apart with your breath.\n
    \n
    - Slowly exhale your breath* through your nose.\n
    \n
    - Repeat deep breaths for one minute.\n,
    </string>
    <string name="to_choose">To Choose</string>
    <string name="to_choose_info">
        - Consume unsaturated fats (e.g. found in fish, avocado, nuts, olive oil, soy, canola, sunflower and corn oils) rather than saturated fats (e.g. found in fatty meat, butter, coconut oil, cream, cheese, ghee and lard).\n
    - Choose white meat (e.g. poultry) and fish, which are generally low in fat, rather than red meat.\n
    - Choose fresh fruits instead of sweet snacks such as cookies, cakes and chocolate.\n
    - Where possible, opt for low-fat or reduced-fat versions of milk and dairy products.\n
    </string>
    <string name="to_avoid">To Avoid</string>
    <string name="to_avoid_info">
        - Avoid processed meats because they are high in fat and salt.\n
    - Avoid industrially produced trans fats. These are often found in processed food, fast food, snack food, fried food, frozen pizza, pies, cookies, margarines and spreads.\n
    - When cooking and preparing food, limit the amount of salt and high-sodium condiments (e.g. soy sauce and fish sauce).\n
    - Limit your daily salt intake to less than 5 g (approximately 1 teaspoon), and use iodized salt.\n
    - Avoid foods (e.g. snacks) that are high in salt and sugar.\n
    - Limit your intake of soft drinks or sodas and other drinks that are high in sugar (e.g. fruit juices, fruit juice concentrates and syrups, flavoured milks and yogurt drinks).\n
    \n
    </string>
    <string name="what_is_covid">What is COVID-19?</string>
    <string name="covid_is">
        COVID-19 is the disease caused by a new coronavirus called SARS-CoV-2.
    WHO first learned of this new virus on 31 December 2019, following a report of a cluster of cases of
    ‘viral pneumonia’ in Wuhan, People’s Republic of China.
    </string>
    <string name="what_happens">
        What happens to people who get COVID-19?
    </string>
    <string name="what_happens_info" formatted="false">Among those who develop symptoms, most (about 80%) recover from the disease without needing hospital treatment. About 15% become seriously ill and require oxygen and 5% become critically ill and need intensive care.
    </string>
    <string name="are_there_treatments">
    Are there treatments for COVID-19?
    </string>
    <string name="scientists_around">
        Scientists around the world are working to find and develop treatments for COVID-19.\n
    \n
    Optimal supportive care includes oxygen for severely ill patients and those who are at risk for severe disease and more advanced respiratory support such as ventilation for patients who are critically ill.\n
    \n
    WHO does not recommend self-medication with any medicines, including antibiotics, as a prevention or cure for COVID-19. WHO is coordinating efforts to develop treatments for COVID-19 and will continue to provide new information as it becomes available.
    </string>
    <string name="are_there_long">
    Are there long-term effects of COVID-19?
    </string>
</resources>