<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".info.InfoFragment">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/card_bg"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/bg_card_info"
            android:gravity="end"
            android:orientation="horizontal"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/title_info"
                android:layout_marginHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/hi_how_can_i_nhelp_you_today"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
               />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-28dp"
                android:rotation="-30"
                android:src="@drawable/bg_header" />

        </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="16dp"
       app:layout_constraintTop_toBottomOf="@+id/card_bg"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="2"
           android:paddingHorizontal="8dp"
           android:layout_marginTop="8dp"
           android:orientation="horizontal">

           <androidx.cardview.widget.CardView
               android:id="@+id/general"
               android:layout_width="0dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:layout_marginVertical="8dp"
               android:layout_marginHorizontal="8dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
               <ImageView
                   android:layout_width="match_parent"
                   android:padding="36dp"
                   android:layout_height="160dp"
                   android:src="@drawable/general"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/general"
                   android:paddingBottom="12dp"
                   android:textSize="16sp"
                   android:fontFamily="@font/montserrat_medium"
                   android:textColor="@color/colorPrimary"
                   android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/symptoms"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:backgroundTint="@color/bgColorPrimary"
               app:cardCornerRadius="16dp"
               android:layout_marginTop="24dp"
               android:layout_marginBottom="8dp"
               android:layout_marginHorizontal="8dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="36dp"
                       android:src="@drawable/dry_cough"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/symptoms"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="2"
           android:paddingHorizontal="8dp"
           android:orientation="horizontal">

           <androidx.cardview.widget.CardView
               android:id="@+id/prevention"
               android:layout_width="0dp"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_marginVertical="8dp"
               android:layout_marginHorizontal="8dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="36dp"
                       android:src="@drawable/prevention"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/prevention"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/vaccines"
               android:layout_width="0dp"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:layout_marginTop="24dp"
               android:layout_marginHorizontal="8dp"
               android:layout_marginBottom="8dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="36dp"
                       android:src="@drawable/vaccins"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Vaccines"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="2"
           android:paddingHorizontal="8dp"
           android:orientation="horizontal">

           <androidx.cardview.widget.CardView
               android:id="@+id/covid_test"
               android:layout_width="0dp"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_marginVertical="8dp"
               android:layout_marginHorizontal="8dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="24dp"
                       android:src="@drawable/covid_test"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/covid_test"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/exercise"
               android:layout_width="0dp"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:layout_marginTop="24dp"
               android:layout_marginHorizontal="8dp"
               android:layout_marginBottom="8dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="24dp"
                       android:src="@drawable/exercise"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/exercise"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="2"
           android:paddingHorizontal="8dp"
           android:orientation="horizontal">

           <androidx.cardview.widget.CardView
               android:id="@+id/food"
               android:layout_width="0dp"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_marginVertical="8dp"
               android:layout_marginHorizontal="8dp"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="24dp"
                       android:src="@drawable/food"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/food"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:id="@+id/people_at_risk"
               android:layout_width="0dp"
               android:layout_weight="1"
               app:cardCornerRadius="16dp"
               android:layout_marginTop="24dp"
               android:layout_marginHorizontal="8dp"
               android:layout_marginBottom="8dp"
               android:backgroundTint="@color/bgColorPrimary"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="160dp"
                       android:padding="24dp"
                       android:src="@drawable/peoplerisk"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/people_at_risk"
                       android:paddingBottom="12dp"
                       android:textSize="16sp"
                       android:fontFamily="@font/montserrat_medium"
                       android:textColor="@color/colorPrimary"
                       android:layout_gravity="center"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
   </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</FrameLayout>